feat: implement /auth/login route
